# PyTAAA

./: .env  .gitignore  OPTIMIZATION_SUMMARY.md  PyTAAA.params  PyTAAA.py  PyTAAA_backtest_filtered.py  PyTAAA_backtest_sp500_pine.py  PyTAAA_backtest_sp500_pine_refactored.py  PyTAAA_diagnostic.params  PyTAAA_holdings.params  PyTAAA_status.params  README.md  WriteWebPage_pi.py  abacus_best_performers.bak.csv  abacus_best_performers.csv  abacus_best_performers.xlsx  abacus_best_performers_2.xlsx  abacus_combined_PyTAAA_2026-2-6.json  abacus_combined_PyTAAA_status.params.json  abacus_combined_PyTAAA_status.params.json.backup.202512151200  abacus_combined_PyTAAA_status.test_params.json  benchmark_percentile_optimization.py  check_docstrings.py  clean_and_add_pngs.py  compute_allocations.py  compute_new_allocations.py  console_output_phase3.4.txt  daily_abacus_runtime.json  daily_abacus_update.py  finviz_delisted_cache.json  mark_infill_as_nan.py  merge_csv_with_pngs.py  modify_saved_state.py  montecarlo_config.json  pyTAAAweb_DailyChannelOffsetSignal_status.params  pyTAAAweb_MeanTrendDispersion_status.params  pyTAAAweb_backtestPortfolioValue.params  pyTAAAweb_backtestTodayMontecarloPortfolioValue.csv  pyTAAAweb_numberUptrendingStocks_status.params  pyproject.toml  (+30 more)
.agentic-docs/: monte-carlo-backtest-entry-point.md
.github/: RECOMMEND_MODEL_REFACTORING_PLAN.md  abacus-json-implementation-instructions.md  abacus-json-usage-instructions.md  copilot-instructions.md  daily-tracking-portfolio-implementation-summary.md  debug.chatmode.md  implement-abacus-value-tracking-instructions.md  implementation-plan-abacus-model-switching-instructions.md  plan.chatmode.md  research.chatmode.md  sp500_pine-integration-instructions.md  sp500_pine-integration-revised-instructions.md  sp500_pine_step1_instructions.md  trading_system_plan.md  trading_system_progress.md
archive/: PyTAAA.py.legacy  clean_SP500_data.py.legacy
docs/: ARCHITECTURE.md  DAILY_OPERATIONS_GUIDE.md  (+24 more)
(+383 files in other folders)
