[project]
name = "pytaaa"
version = "0.1.0"
description = "Tactical Asset Allocation Advisor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "finvizfinance>=1.1.0",
    "git-filter-repo>=2.47.0",
    "holidays>=0.66",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "paramiko>=3.5.1",
    "scipy>=1.15.1",
    "spyder>=6.0.4",
    "tables>=3.10.2",
    "yfinance>=0.2.52",
]
