[project]
name = "pytaaa"
version = "0.1.0"
description = "Tactical Asset Allocation Advisor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bottleneck>=1.6.0",
    "bs4>=0.0.2",
    "click>=8.1.8",
    "cryptography>=44.0.1",
    "finvizfinance>=1.1.0",
    "git-filter-repo>=2.47.0",
    "graphviz>=0.21",
    "holidays>=0.66",
    "matplotlib>=3.10.0",
    "networkx>=3.5",
    "pandas>=2.2.3",
    "pandas-market-calendars>=4.6.1",
    "paramiko>=3.5.1",
    "pygraphviz>=1.14",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.1",
    "spyder>=6.0.4",
    "tables>=3.10.2",
    "tqdm>=4.67.1",
    "yfinance>=0.2.52",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
